fixed scrollbar colors

--- a/Extension/src/pages/common/components/ui/Select/select.pcss
+++ b/Extension/src/pages/common/components/ui/Select/select.pcss
@@ -47,12 +47,12 @@
         }
 
         &::-webkit-scrollbar-track {
-            background: var(--fills-backgrounds-page-background-additional-default); /* FIXME: opacity: 0.3 */
+            background: var(--scrollbar-track);
         }
 
         &::-webkit-scrollbar-thumb {
             border-radius: 4px;
-            background-color: var(--stroke-icons-gray-icons-disabled);
+            background-color: var(--scrollbar-thumb);
         }
     }
 
