--- a/Extension/src/pages/common/styles/vars.pcss
+++ b/Extension/src/pages/common/styles/vars.pcss
@@ -155,6 +155,8 @@
     --editor-syntax-yellow: #795e26;
     --editor-syntax-pink: #9e45b4;
     --editor-syntax-red: #a31515;
+    --scrollbar-track: rgba(246, 246, 246, 0.3); /* gray-10 with opacity 0.3 */
+    --scrollbar-thumb: var(--gray-30);
 
     @media (prefers-color-scheme: dark) {
         --fills-backgrounds-cards-background-default: var(--gray-80);
@@ -198,6 +200,8 @@
         --editor-syntax-yellow: #dbdb84;
         --editor-syntax-pink: #c46cbd;
         --editor-syntax-red: #cf8263;
+        --scrollbar-track: rgba(61, 61, 61, 0.3); /* gray-80 with opacity 0.3 */
+        --scrollbar-thumb: var(--gray-70);
     }
 }
 
@@ -243,6 +247,8 @@
     --editor-syntax-yellow: #dbdb84;
     --editor-syntax-pink: #c46cbd;
     --editor-syntax-red: #cf8263;
+    --scrollbar-track: rgba(61, 61, 61, 0.3); /* gray-80 with opacity 0.3 */
+    --scrollbar-thumb: var(--gray-70);
 }
 
 .light-mode {
@@ -287,6 +293,8 @@
     --editor-syntax-yellow: #795e26;
     --editor-syntax-pink: #9e45b4;
     --editor-syntax-red: #a31515;
+    --scrollbar-track: rgba(246, 246, 246, 0.3); /* gray-10 with opacity 0.3 */
+    --scrollbar-thumb: var(--gray-30);
 }
 
 .android {
