--- a/Extension/src/pages/filtering-log/styles/common.pcss
+++ b/Extension/src/pages/filtering-log/styles/common.pcss
@@ -18,16 +18,16 @@ body,
 }
 
 *::-webkit-scrollbar-track {
-    background: var(--fills-backgrounds-page-background-additional-default); /* FIXME: opacity: 0.3 */
+    background: var(--scrollbar-track);
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: var(--stroke-icons-gray-icons-disabled);
+    background-color: var(--scrollbar-thumb);
     border-radius: 12px;
 }
 
 *::-webkit-scrollbar-corner {
-    background: var(--fills-backgrounds-page-background-additional-default); /* FIXME: opacity: 0.3 */
+    background: var(--scrollbar-track);
 }
 
 body {
